source/assets/css/theme.css
/* ... */
.navbar-custom .dropdown-item {
	font-size:13px;
  text-transform: none;
}
.navbar-custom .navbar-brand {
	font-size:20px;
	text-transform: lowercase;
	letter-spacing: 1px;
}
.navbar-custom .navbar-brand:after {
  content: "";
  box-sizing: content-box;
  display: block;
  position: relative;
  top: -2px;
  left: 10px;
  height: 0px;
  border: 1px solid var(--secondary-color);
}
.navbar-custom .navbar-brand:focus {
	outline:0;
}
.navbar-custom .navbar-brand .navbar-toggle {
	padding:4px 6px;
	font-size:16px;
	color:#fff;
}
.navbar-custom .navbar-brand .navbar-toggle:focus,.navbar-custom .navbar-brand .navbar-toggle:active {
	outline:0;
}
.nav-link {
	padding-right:1rem;
	padding-left:1rem;
}
.nav-link a {
	-webkit-transition:background .3s ease-in-out;
	-moz-transition:background .3s ease-in-out;
	transition:background .3s ease-in-out;
}
.nav-link:hover {
	outline:0;
	color: var(--secondary-color);
	background-color:transparent;
}
.nav-link:focus,.nav-link:active {
	outline:0;
	background-color:transparent;
}
.nav-link.active {
	outline:0;
}
.nav-link.active {
	color: var(--secondary-color);
}
.nav-link.active:hover {
	color: var(--secondary-color);
}
.sketchfab-embed-wrapper {
	width: 100%;
}
@media(min-width:768px) {
	.navbar-custom {
			padding:15px 0;
			border-bottom:0;
			font-size:13px;
			background:0 0;
			-webkit-transition:background .5s ease-in-out,padding .5s ease-in-out;
			-moz-transition:background .5s ease-in-out,padding .5s ease-in-out;
			transition:background .5s ease-in-out,padding .5s ease-in-out;
	}
	.navbar-custom.top-nav-collapse {
		padding:1px 0;
		border-bottom:1px solid rgba(255,255,255,.3);
		color:#333;
		background:#fff;
	}
	.navbar-custom.top-nav-collapse a {
			color: var(--primary-color);
			display:inline-block;
	}
	.navbar-expand-md .navbar-custom.navbar-nav .nav-link {
		padding-right:1rem;
		padding-left:1rem;
		font-weight:300;
	}
	.dropdown-menu {
		border:1px solid rgba(0,0,0,0.03);
	}
}
.intro {
	display:table;
	width:100%;
	height:auto;
	padding:100px 0 100px 0;
	text-align:center;
	color:#fff;
	background-image: radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.18)),url('/assets/images/pictures/20210206181823_2.jpg');
	-webkit-background-size:cover;
	-moz-background-size:cover;
	background-size:cover;
	-o-background-size:cover;
}
.intro .intro-body {
	display:table-cell;
	vertical-align:middle;
}
@keyframes animatedBackground {
	from {
		mask-position: 0 100%;
		-webkit-mask-position: 0 100%;
	}
	to {
		mask-position: 0 0%;
		-webkit-mask-position: 0 0%;
	}
}
.intro .intro-body:after {
	content: '';
  position: absolute;
  z-index:-1;
  bottom: -15px;
  left: 0;
  width: 100%;
  top:0;
  background: transparent url('/assets/images/triangle-pattern.png');
  -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0));
	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0));
  -webkit-mask-size: 100% 200%;
  -webkit-mask-position: 0px 0px;
  mask-size: 100% 200%;
  mask-position: 0px 0px;

  z-index: 1;
  animation: animatedBackground 5s linear infinite;
}

.intro .intro-body .brand-heading {
	font-size:40px;
	text-transform: lowercase;
	color: white;
}
.intro .intro-body .brand-heading:after {
  content: "";
  box-sizing: content-box;
  display: block;
  position: relative;
  top: 0px;
  left: 30px;
  height: 0px;
  border: 2px solid var(--secondary-color);
}
.intro .intro-body .intro-text {
	font-size:18px;
}
@media(min-width:768px) {
	.intro {
			height:100vh;
			padding:0;
	}
	.intro.vh-30 {
		height: 30vh;
		background-position-y: -30vh;
	}
	.intro .intro-body .brand-heading {
			font-size:60px;
			margin-top:90px;
			margin-bottom:20px;
			display:inline-block;
			padding:7px 0;
	}
	.intro .intro-body .intro-text {
			font-size:20px;
				font-weight:300;
				letter-spacing:3px;
	}
}
.btn-circle {
	width:50px;
	height:50px;
	margin-top:15px;
	line-height:40px;
	text-align:center;
	border:2px solid #fff;
	border-radius:100%!important;
	font-size:20px;
	color:#fff;
	background:0 0;
	-webkit-transition:background .3s ease-in-out;
	-moz-transition:background .3s ease-in-out;
	transition:background .3s ease-in-out;
}
.btn-circle:hover,.btn-circle:focus {
	outline:0;
	color:#fff;
	background:rgba(255,255,255,.1);
}
.btn-circle i.animated {
	-webkit-transition-property:-webkit-transform;
	-webkit-transition-duration:1s;
	-moz-transition-property:-moz-transform;
	-moz-transition-duration:1s;
}
.btn-circle:hover i.animated {
	-webkit-animation-name:pulse;
	-moz-animation-name:pulse;
	-webkit-animation-duration:1.5s;
	-moz-animation-duration:1.5s;
	-webkit-animation-iteration-count:infinite;
	-moz-animation-iteration-count:infinite;
	-webkit-animation-timing-function:linear;
	-moz-animation-timing-function:linear;
}
@-webkit-keyframes pulse {
	0% {
			-webkit-transform:scale(1);
			transform:scale(1);
	}
	50% {
			-webkit-transform:scale(1.2);
			transform:scale(1.2);
	}
	100% {
			-webkit-transform:scale(1);
			transform:scale(1);
	}
}
@-moz-keyframes pulse {
	0% {
			-moz-transform:scale(1);
			transform:scale(1);
	}
	50% {
			-moz-transform:scale(1.2);
			transform:scale(1.2);
	}
	100% {
			-moz-transform:scale(1);
			transform:scale(1);
	}
}
.content-section {
	padding-top:40px;
	padding-bottom:40px;
	clear:both;
}
@media(min-width:767px) {
	.content-section {
			padding:150px 0;
				 clear:both;
	}
}
.btn {
	border-radius:0;
	text-transform:uppercase;
	font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
	font-weight:400;
	-webkit-transition:all .3s ease-in-out;
	-moz-transition:all .3s ease-in-out;
	transition:all .3s ease-in-out;
}
.btn-default {
	border:1px solid #42dca3;
	color:#42dca3;
	background-color:transparent;
}
.btn-default:hover,.btn-default:focus {
	border:1px solid #42dca3;
	outline:0;
	color:#000;
	background-color:#42dca3;
}
/* ... */

